# exercism_watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exercism_watcher.go  go.mod  go.sum  watcher.go  watcher.sh
man/: exercism_watcher.1
